简单构建，更新日志

--- a/开发者日志.md
+++ b/开发者日志.md
@@ -1,9 +1,20 @@
 # 3月18日
 建库<br>
-小泉加入库
+泉绮oyan加入库
 
-## 小泉：
+## 泉绮oyan：
 提出想法。
 ![说明图](images/SthAboutTheWeb.png)
 简单得写了写，结果：
 ![图1](images/res1.png)
+
+# 3月19日
+
+## 泉绮oyan:
+没有做出什么，
+感觉有些难过
+
+# 3月22日
+狠狠学了CSS
+<br>搞了响应式布局<br>昨晚搞了个chatGPT
+<br>今天学了js
